Prevent page layout from shifting on scroll pages
Set 100vw for HTML element so that the page's alignment in the viewport remains the same whether or not a scrollbar is present.

--- a/css/seenet.scss
+++ b/css/seenet.scss
@@ -4,6 +4,10 @@
 $main_color:#3a538f;
 $desat_color:#5e6168;
 
+html {
+    width:100vw;
+}
+
 body {
     max-width:1200px;
     margin:auto;
